@@ -12,6 +12,7 @@ Stability update for v0.9.9
 * Fixed crash on startup on Windows with a session owning a wide char
 * Fixed issue with wide chars on Windows
 * Redesigned all dialog windows to conform to GNOME guideness
+* Added ability to join SER files
 
 v0.9.9, Jun 07, 2018
 Stability update for v0.9.8
