@@ -12,6 +12,7 @@ xxxxxxxx
 * Fixed crash on startup on Windows with a session owning a wide char
 * Fixed issue with wide chars on Windows
 * Redesigned all dialog windows to conform to GNOME guideness
+* Added ability to join SER files
 
 siril 0.9.9
 06/07/18
